--- a/404.html
+++ b/404.html
@@ -272,7 +272,7 @@
 
   
 
-<meta name="description" content="A PhD in Robotics" />
+<meta name="description" content="Researcher in machin learning and signal processing" />
 
 
 
@@ -308,14 +308,11 @@
 
 
 <meta property="twitter:card" content="summary" />
-
-  <meta property="twitter:site" content="@linzhuyue" />
-  <meta property="twitter:creator" content="@linzhuyue" />
 <meta property="twitter:image" content="https://junxiao01.github.io/media/icon_hud3f906394e33c42b903908d2e33c2bfb_42965_512x512_fill_lanczos_center_3.png" />
 <meta property="og:site_name" content="Jun Xiao" />
 <meta property="og:url" content="https://junxiao01.github.io/404.html" />
 <meta property="og:title" content="404 Page not found | Jun Xiao" />
-<meta property="og:description" content="A PhD in Robotics" /><meta property="og:image" content="https://junxiao01.github.io/media/icon_hud3f906394e33c42b903908d2e33c2bfb_42965_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="Researcher in machin learning and signal processing" /><meta property="og:image" content="https://junxiao01.github.io/media/icon_hud3f906394e33c42b903908d2e33c2bfb_42965_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
 
   
 
