--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-content-start">
-            <div class="mr-2 mb-2"><a href="https://www.polyu.edu.hk/" target="_blank" rel="noopener"><img src="/media/icons/brands/cuhk.svg" width="56px" height="56px" alt="PolyU" loading="lazy"></a></div>
+            <div class="mr-2 mb-2"><a href="https://www.polyu.edu.hk/" target="_blank" rel="noopener"><img src="/media/icons/brands/polyu.svg" width="56px" height="56px" alt="PolyU" loading="lazy"></a></div>
             <div>
           
 
@@ -1148,7 +1148,7 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-content-start">
-            <div class="mr-2 mb-2"><a href="https://www.msra.cn/" target="_blank" rel="noopener"><img src="/media/icons/brands/dji.svg" width="56px" height="56px" alt="Microsoft Research Aisa" loading="lazy"></a></div>
+            <div class="mr-2 mb-2"><a href="https://www.msra.cn/" target="_blank" rel="noopener"><img src="/media/icons/brands/msra.svg" width="56px" height="56px" alt="Microsoft Research Aisa" loading="lazy"></a></div>
             <div>
           
 
