--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
 
     <div class="article-style">
       <p>I am currently a postdoc fellow, supervised by <a href="http://www.eie.polyu.edu.hk/~enkmlam/" target="_blank" rel="noopener">Prof. Kin-man Lam</a>, in the department of electronic and information engineering, the Hong Kong Polytechnic University.</p>
-<p>My research interests include image restoration (e.g., image/video super-resolution, image/video denoising, high-dynamic range imaging, etc.), image/video synthesis and quality enhancement, high-dimensional signal processing in finance (e.g., statistical arbitray and financial index enhancement), and machine learning (e.g., bayesian machine learning and robust machine learning).</p>
+<p>My research interests include image restoration (e.g., image/video super-resolution, image/video denoising, high-dynamic range imaging, etc.), image/video synthesis and quality enhancement, high-dimensional signal processing in finance (e.g., statistical arbitrage and financial index enhancement), and machine learning (e.g., bayesian machine learning and robust machine learning).</p>
 <p>I am currently looking for other full-time oportunities in industry, including machine learning researcher (computer vision), data scientist, quantitive researcher in finance.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my 
