--- a/research/quadruped_two_leg_walking/index.html
+++ b/research/quadruped_two_leg_walking/index.html
@@ -934,7 +934,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://junxiao01.github.io/">Jun Xiao</a></h5>
       <h6 class="card-subtitle">Postdoct Fellow</h6>
-      <p class="card-text">My research interests include quadruped robot, bipedal robot and Reinforcement Learning.</p>
+      <p class="card-text">My research interests include computer vision, machine learning, and signal processing methods in finance.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
