--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: March 11, 2023 --><html lang="en-us" >
+<!-- Last Published: March 12, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -922,7 +922,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">Ph.D. in Electronic and Information Engineering, 2018.09-2022.10</p>
+              <p class="course">Ph.D. in Computer Science, 2018.09-2022.10</p>
               <p class="institution">The Hong Kong Polytechnic University (PolyU)</p>
             </div>
           </li>
