--- a/index.html
+++ b/index.html
@@ -947,6 +947,7 @@
     <div class="article-style">
       <p>I am currently a postdoc fellow, supervised by <a href="http://www.eie.polyu.edu.hk/~enkmlam/" target="_blank" rel="noopener">Prof. Kin-Man Lam</a>, in the department of Electrical and Electronic Engineering, the Hong Kong Polytechnic University.</p>
 <p>My research interests include image/video processing, restoration and enhancement (e.g., image/video super-resolution, image/video denoising, high dynamic range imaging, etc.), machine learning (e.g., bayesian machine learning, domain adaptation and generalization, robustness, etc.), deep generative models (e.g., diffusion models and flow matching), and AIGC-related topics.</p>
+<p><strong>Currently, I am in the job market and find opportunities in both industry and academic</strong>. I am legally authorized to work in Mainland China, Hong Kong, and Canada. I am open to considering opportunities in other locations, provided that a working visa sponsorship is available.</p>
 <!-- industry, including machine learning researcher (computer vision), data scientist, quantitive researcher in finance.  -->  
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my 
@@ -1130,6 +1131,12 @@
 <li>
 <p><strong>Jun Xiao</strong>, Zihang Lyu, Cong Zhang, Yakun Ju, Changjian Shui, and Kin-Man Lam. ``Towards Progressive Multi-Frequency Representation for Image Warping
 &ldquo;, in Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024.</p>
+</li>
+<li>
+<p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&rdquo;, Neurocomputing, 2024.</p>
+</li>
+<li>
+<p><strong>Jun Xiao</strong>, Qian Ye, Rui Zhao, Kin-Man Lam, and Kao Wan, ``Deep Multi-scale Feature Mixture Model for Image Super-resolution with Multiple-Focal-length Degradation&quot;, Signal Processing: Image Communication, 2024.</p>
 </li>
 <li>
 <p>I co-organize the workshop &ldquo;<a href="https://ieee-smart-world-congress.org/program/uic2023/workshops" target="_blank" rel="noopener">Photography Measurement and Imaging in the Deep Learning Era</a>&rdquo; in the 20th IEEE International Conference on Ubiquitous Intelligence and Computing (UIC 2023)</p>
