--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 10, 2024 --><html lang="en-us" >
+<!-- Last Published: May 31, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -947,6 +947,7 @@
     <div class="article-style">
       <p>I am currently a postdoc fellow, supervised by <a href="http://www.eie.polyu.edu.hk/~enkmlam/" target="_blank" rel="noopener">Prof. Kin-Man Lam</a>, in the department of Electrical and Electronic Engineering, the Hong Kong Polytechnic University.</p>
 <p>My research interests include image/video processing, restoration and enhancement (e.g., image/video super-resolution, image/video denoising, high dynamic range imaging, etc.), machine learning (e.g., bayesian machine learning, domain adaptation and generalization, robustness, etc.), deep generative models (e.g., diffusion models and flow matching), and AIGC-related topics.</p>
+<p><strong>(News):</strong> I am looking for new job opportunities. Currently, I am legally authorized to work in Mainland China, Hong Kong, and Canada (Applying OWP Visa). I am open to considering opportunities in other locations, provided that a working visa sponsorship is available.</p>
 <!-- industry, including machine learning researcher (computer vision), data scientist, quantitive researcher in finance.  -->  
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my 
