update CV and papers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 31, 2024 --><html lang="en-us" >
+<!-- Last Published: July 2, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -946,8 +946,8 @@
 
     <div class="article-style">
       <p>I am currently a postdoc fellow, supervised by <a href="http://www.eie.polyu.edu.hk/~enkmlam/" target="_blank" rel="noopener">Prof. Kin-Man Lam</a>, in the department of Electrical and Electronic Engineering, the Hong Kong Polytechnic University.</p>
-<p>My research interests include image/video processing, restoration and enhancement (e.g., image/video super-resolution, image/video denoising, high dynamic range imaging, etc.), machine learning (e.g., bayesian machine learning, domain adaptation and generalization, robustness, etc.), deep generative models (e.g., diffusion models and flow matching), and AIGC-related topics.</p>
-<p><strong>(News):</strong> I am looking for new job opportunities. Currently, I am legally authorized to work in Mainland China, Hong Kong, and Canada (Applying OWP Visa). I am open to considering opportunities in other locations, provided that a working visa sponsorship is available.</p>
+<p>My research interests include image/video processing, restoration and enhancement (e.g., image/video super-resolution, image/video denoising, high dynamic range imaging, etc.), robust machine learning (e.g., domain adaptation and generalization.), deep generative models (e.g., diffusion models and flow matching), and AIGC-related topics.</p>
+<p><strong>(News): I am actively seeking new full-time opportunities.</strong> I am currently authorized to work in Mainland China, Hong Kong, and Canada (pending OWP Visa approval). I am also open to considering opportunities in other locations, provided that a working visa sponsorship is available.</p>
 <!-- industry, including machine learning researcher (computer vision), data scientist, quantitive researcher in finance.  -->  
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my 
@@ -1130,13 +1130,16 @@
   <ol>
 <li>
 <p><strong>Jun Xiao</strong>, Zihang Lyu, Cong Zhang, Yakun Ju, Changjian Shui, and Kin-Man Lam. ``Towards Progressive Multi-Frequency Representation for Image Warping
-&ldquo;, in Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2024.</p>
+&ldquo;, in Proceedings of the <strong>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</strong>, 2024.</p>
 </li>
 <li>
-<p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&rdquo;, Neurocomputing, 2024.</p>
+<p><strong>Jun Xiao</strong>, Changjian Shui, Zhi-Song Liu, Qian Ye, and Kin-Man Lam, ``Learning Equilibrium Transformation for Gamut Expansion and Color Restoration&rdquo;, in Proceedings of the <strong>European Conference on Computer Vision (ECCV)</strong>, 2024.</p>
 </li>
 <li>
-<p><strong>Jun Xiao</strong>, Qian Ye, Rui Zhao, Kin-Man Lam, and Kao Wan, ``Deep Multi-scale Feature Mixture Model for Image Super-resolution with Multiple-Focal-length Degradation&quot;, Signal Processing: Image Communication, 2024.</p>
+<p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&quot;, in <strong>Neurocomputing</strong>, 2024.</p>
+</li>
+<li>
+<p><strong>Jun Xiao</strong>, Qian Ye, Rui Zhao, Kin-Man Lam, and Kao Wan, ``Deep Multi-scale Feature Mixture Model for Image Super-resolution with Multiple-Focal-length Degradation&quot;, in <strong>Signal Processing: Image Communication</strong>, 2024.</p>
 </li>
 <li>
 <p>I co-organize the workshop &ldquo;<a href="https://ieee-smart-world-congress.org/program/uic2023/workshops" target="_blank" rel="noopener">Photography Measurement and Imaging in the Deep Learning Era</a>&rdquo; in the 20th IEEE International Conference on Ubiquitous Intelligence and Computing (UIC 2023)</p>
