update workshop papers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: July 2, 2024 --><html lang="en-us" >
+<!-- Last Published: August 21, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1134,6 +1134,13 @@
 </li>
 <li>
 <p><strong>Jun Xiao</strong>, Changjian Shui, Zhi-Song Liu, Qian Ye, and Kin-Man Lam, ``Learning Equilibrium Transformation for Gamut Expansion and Color Restoration&rdquo;, in Proceedings of the <strong>European Conference on Computer Vision (ECCV)</strong>, 2024.</p>
+</li>
+<li>
+<p>Yushen Zuo, <strong>Jun Xiao</strong>, Kin-Chung Chan, Rongkang Dong, Cuixin Yang, Zongqi HE, Hao Xie, Kin-Man Lam，``Towards Multi-View Consistent Style Transfer with One-Step Diffusion via Vision Conditioning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
+</li>
+<li>
+<p>Zhi-Song Liu, Li-Wen Wang, <strong>Jun Xiao</strong>, Vicky Kalogeiton, ``<br>
+Bridging Text and Image for Artist Style Transfer via Contrastive Learning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
 </li>
 <li>
 <p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&quot;, in <strong>Neurocomputing</strong>, 2024.</p>
