update workshop papers

--- a/index.html
+++ b/index.html
@@ -1139,8 +1139,7 @@
 <p>Yushen Zuo, <strong>Jun Xiao</strong>, Kin-Chung Chan, Rongkang Dong, Cuixin Yang, Zongqi HE, Hao Xie, Kin-Man Lam，``Towards Multi-View Consistent Style Transfer with One-Step Diffusion via Vision Conditioning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
 </li>
 <li>
-<p>Zhi-Song Liu, Li-Wen Wang, <strong>Jun Xiao</strong>, Vicky Kalogeiton, ``<br>
-Bridging Text and Image for Artist Style Transfer via Contrastive Learning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
+<p>Zhi-Song Liu, Li-Wen Wang, <strong>Jun Xiao</strong>, Vicky Kalogeiton, ``Bridging Text and Image for Artist Style Transfer via Contrastive Learning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
 </li>
 <li>
 <p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&quot;, in <strong>Neurocomputing</strong>, 2024.</p>
