--- a/index.html
+++ b/index.html
@@ -1136,6 +1136,9 @@
 <p><strong>Jun Xiao</strong>, Changjian Shui, Zhi-Song Liu, Qian Ye, and Kin-Man Lam, ``Learning Equilibrium Transformation for Gamut Expansion and Color Restoration&rdquo;, in Proceedings of the <strong>European Conference on Computer Vision (ECCV)</strong>, 2024.</p>
 </li>
 <li>
+<p>Kin-Chung Chan, <strong>Jun Xiao</strong>, Hana Lebeta Goshu, Kin-man Lam, &ldquo;Point Cloud Densification for 3D Gaussian Splatting from Sparse Input Views&rdquo;, in Proceedings of <strong>ACM Multimedia (ACM-MM)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
+</li>
+<li>
 <p>Yushen Zuo, <strong>Jun Xiao</strong>, Kin-Chung Chan, Rongkang Dong, Cuixin Yang, Zongqi HE, Hao Xie, Kin-Man Lam，``Towards Multi-View Consistent Style Transfer with One-Step Diffusion via Vision Conditioning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
 </li>
 <li>
