--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 21, 2024 --><html lang="en-us" >
+<!-- Last Published: September 6, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1136,7 +1136,16 @@
 <p><strong>Jun Xiao</strong>, Changjian Shui, Zhi-Song Liu, Qian Ye, and Kin-Man Lam, ``Learning Equilibrium Transformation for Gamut Expansion and Color Restoration&rdquo;, in Proceedings of the <strong>European Conference on Computer Vision (ECCV)</strong>, 2024.</p>
 </li>
 <li>
+<p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&quot;, in <strong>Neurocomputing</strong>, 2024.</p>
+</li>
+<li>
+<p><strong>Jun Xiao</strong>, Qian Ye, Rui Zhao, Kin-Man Lam, and Kao Wan, ``Deep Multi-scale Feature Mixture Model for Image Super-resolution with Multiple-Focal-length Degradation&quot;, in <strong>Signal Processing: Image Communication</strong>, 2024.</p>
+</li>
+<li>
 <p>Kin-Chung Chan, <strong>Jun Xiao</strong>, Hana Lebeta Goshu, Kin-man Lam, &ldquo;Point Cloud Densification for 3D Gaussian Splatting from Sparse Input Views&rdquo;, in Proceedings of <strong>ACM Multimedia (ACM-MM)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
+</li>
+<li>
+<p><strong>Jun Xiao</strong>, Zihang Lyu, Hao Xie, Cong Zhang, Yakun Ju, Changjian Shui, and Kin-Man Lam. ``Frequency-Aware Guidance for Blind Image Restoration via Diffusion Models&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
 </li>
 <li>
 <p>Yushen Zuo, <strong>Jun Xiao</strong>, Kin-Chung Chan, Rongkang Dong, Cuixin Yang, Zongqi HE, Hao Xie, Kin-Man Lam，``Towards Multi-View Consistent Style Transfer with One-Step Diffusion via Vision Conditioning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024. (<strong>Corresponding Author</strong>)</p>
@@ -1145,10 +1154,10 @@
 <p>Zhi-Song Liu, Li-Wen Wang, <strong>Jun Xiao</strong>, Vicky Kalogeiton, ``Bridging Text and Image for Artist Style Transfer via Contrastive Learning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
 </li>
 <li>
-<p><strong>Jun Xiao</strong>, Qian Ye, Tianshan Liu, Cong Zhang, and Kin-Man Lam, ``Deep Progressive Feature Aggregation Network for Multi-frame High Dynamic Range Imaging&quot;, in <strong>Neurocomputing</strong>, 2024.</p>
+<p>Our team ``POLYU-AISP: Fast Sequential Motion Diffusion for Real-time Video Super-resolution&quot; obtain <strong>the 2nd winner</strong> in the competition of Efficient Video Super-Resolution in the ECCV AIM workshop, 2024.</p>
 </li>
 <li>
-<p><strong>Jun Xiao</strong>, Qian Ye, Rui Zhao, Kin-Man Lam, and Kao Wan, ``Deep Multi-scale Feature Mixture Model for Image Super-resolution with Multiple-Focal-length Degradation&quot;, in <strong>Signal Processing: Image Communication</strong>, 2024.</p>
+<p>Our team obtain <strong>the 3rd winnder</strong> in the Sparse Neural Rendering Challenging in the ECCV AIM workshop, 2024.</p>
 </li>
 <li>
 <p>I co-organize the workshop &ldquo;<a href="https://ieee-smart-world-congress.org/program/uic2023/workshops" target="_blank" rel="noopener">Photography Measurement and Imaging in the Deep Learning Era</a>&rdquo; in the 20th IEEE International Conference on Ubiquitous Intelligence and Computing (UIC 2023)</p>
