correct errors in news

--- a/index.html
+++ b/index.html
@@ -1154,10 +1154,10 @@
 <p>Zhi-Song Liu, Li-Wen Wang, <strong>Jun Xiao</strong>, Vicky Kalogeiton, ``Bridging Text and Image for Artist Style Transfer via Contrastive Learning&quot;, in Proceedings of the <strong>European Conference on Computer Vision Workshop (ECCV-W)</strong>, 2024.</p>
 </li>
 <li>
-<p>Our team ``POLYU-AISP: Fast Sequential Motion Diffusion for Real-time Video Super-resolution&quot; obtain <strong>the 2nd winner</strong> in the competition of Efficient Video Super-Resolution in the ECCV AIM workshop, 2024.</p>
+<p>Our team ``POLYU-AISP&quot; proposed a real-time video super-resolution method &ldquo;Fast Sequential Motion Diffusion for Real-time Video Super-resolution&rdquo; and obtained <strong>the 2nd winner</strong> in the competition of Efficient Video Super-Resolution in the ECCV AIM workshop, 2024.</p>
 </li>
 <li>
-<p>Our team obtain <strong>the 3rd winnder</strong> in the Sparse Neural Rendering Challenging in the ECCV AIM workshop, 2024.</p>
+<p>Our team proposed ``Enhanced SparseNeRF&quot; and obtained <strong>the 3rd winnder</strong> in the Sparse Neural Rendering Challenging in the ECCV AIM workshop, 2024.</p>
 </li>
 <li>
 <p>I co-organize the workshop &ldquo;<a href="https://ieee-smart-world-congress.org/program/uic2023/workshops" target="_blank" rel="noopener">Photography Measurement and Imaging in the Deep Learning Era</a>&rdquo; in the 20th IEEE International Conference on Ubiquitous Intelligence and Computing (UIC 2023)</p>
